<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HneyOnix</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Registrate</string>
    <string name="login">Logueo</string>

    <string name="dont_have_account">No tienes cuenta?</string>
    <string name="already_have_account">Ya tienes cuenta</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="client_id" tools:ignore="TypographyDashes">1048710840323-fp14gsl0vd47ptcvsonuad5c2tg83e3c.apps.googleusercontent.com</string>
</resources>