<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo">
    <!--    Your application icon-->

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="313dp"
        android:layout_height="255dp"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">
    <!--        Email Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/white"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/white">

    </com.google.android.material.textfield.TextInputLayout>
        <!--        Password Input Field-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/white"
            app:startIconTint="@color/white">

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <!--    Login To Existing Account Button-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="92dp"
        android:layout_height="49dp"
        android:background="@color/amarillo"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="571dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="212dp"
        android:layout_height="63dp"
        android:layout_weight="0.6"
        android:gravity="end|center_vertical"
        android:paddingHorizontal="15dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="571dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordLogin"
        android:layout_width="387dp"
        android:layout_height="63dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="40"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailLogin"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLength="40"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />


</androidx.constraintlayout.widget.ConstraintLayout>